fix function contrast color

--- a/src/css/_functions.scss
+++ b/src/css/_functions.scss
@@ -1,7 +1,9 @@
 @function contrast_color($bg_color) {
     @if (lightness($bg_color) > 50) {
-        @return #000;
+        $color : #000;
+        @return $color;
     } @else {
-        @return#fff;
+        $color : #fff;
+        @return $color;
     }
 }
